--- a/app.json
+++ b/app.json
@@ -1,15 +1,12 @@
 {
-    "name": "Telegram Video Watermark Adder Bot",
-    "description": "A Telegram Video Watermark Adder Bot in Pyrogram by @AbirHasan2005",
+    "name": "kmg",
+    "description": "kmg",
     "keywords": [
-        "telegram",
-        "files",
-        "store",
-        "bot"
+        "Hi"
     ],
-    "repository": "https://github.com/AbirHasan2005/Watermark-Bot",
-    "website": "https://telegram.dog/AbirHasan2005",
-    "success_url": "https://t.me/Discovery_Updates",
+    "repository": "",
+    "website": "",
+    "success_url": "",
     "env": {
         "API_ID": {
             "description": "Get this value from my.telegram.org or @TeleORG_Bot"
